[tool.poetry]
name = "langflow-streamlit"
version = "0.1.0"
description = ""
authors = ["Samuel Matioli <samuel.matioli@datastax.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.16"
langchain-community = "^0.3.16"
python-dotenv = "^1.0.1"
pydantic = "^2.10.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
